# deeplx-translate-format-intact

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DOLPHIN_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NON_BLOCKING_PRECOMMIT_SETUP.md  PHILOSOPHY_ENHANCED_TRANSLATION_ARCHITECTURE.md  PHILOSOPHY_ENHANCED_TRANSLATION_ARCHITECTURE_COMPLETE.md  PRE_COMMIT_WORKFLOW.md  README.md  README_USER_CHOICE_SYSTEM.md  app.py  app_old_pymupdf.py  basic_test.py  config.py  conftest.py  debug_candidates.py  debug_compound.py  debug_keywords.py  demo.css  demo.html  package-lock.json  package.json  project-completion-summary-7-9-25.md  pyproject.toml  pytest-service.ini  pytest.ini  requirements-dev.txt  requirements.txt  run_single_test.py  run_tests_with_env.py  simple_test_runner.py  test_database_enhancements.py  test_imports.py  test_linting_setup.py  test_style_violations.py  translator.py  validate_migration.sh  (+1 more)
.augment/rules/: agent-engineering.md  ai-ml-backend.md  architecture.md  context7-mcp-tool.md  deployments.md  git.md  numpy.md  pandas.md  plotly.md  rag.md  security.md  testing.md
.github/: dependabot.yml
.github/workflows/: ci.yml
.kilocode/rules/: byterover-rules.md
.kiro/specs/dolphin-ocr-migration/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
api/: __init__.py  routes.py
config/: __init__.py  debug_test_words.json  klages_terminology.json  languages.json  main.py  philosophical_indicators.json  settings.py
core/: __init__.py  state_manager.py  translation_handler.py
database/: __init__.py  choice_database.py
docs/: ASYNC_PROCESSING.md  CI_CD_and_Risk_Mitigation.md  DOLPHIN_IMPLEMENTATION_PLAN.md  PHILOSOPHY_ENHANCED_TRANSLATION_ARCHITECTURE_COMPLETE.md  gitignore_cleanup.md  philosophy_enhanced_translation_api.md
dolphin_ocr/: __init__.py  config.py  errors.py  layout.py  logging_config.py  monitoring.py  pdf_to_image.py
examples/: README.md  cache_metrics_demo.py  database_enhancements_example.py  lazy_loading_performance_example.py  neologism_integration_example.py  parallel_translation_demo.py  performance_optimization_examples.py  philosophy_enhanced_usage_examples.py  philosophy_interface_usage_example.py  test_metrics.py  user_choice_integration_example.py  web_eval_demo.py
models/: __init__.py  neologism_models.py  user_choice_models.py
scripts/: README.md  README_file_operations_improvements.md  README_find_optimization.md  README_flexible_categories.md  README_flexible_validation.md  README_import_verification_improvement.md  README_path_priority_fix.md  README_pattern_synchronization.md  README_robust_path_resolution.md  README_robust_version_parsing.md  README_verbose_compact_fix.md  basic_test.py  debug_candidates.py  debug_compound.py  debug_keywords.py  deploy_modal.py  example_flexible_validation.py  project_validation_config.json  run_service_tests.sh  run_single_test.py  run_tests_with_env.py  simple_test_runner.py  test_database_enhancements.py  test_imports.py  test_linting_setup.py  test_modal_deployment.py  validate_migration.sh
services/: __init__.py  advanced_pdf_processor.py  async_document_processor.py  confidence_scorer.py  document_processor.py  dolphin_client.py  dolphin_modal_service.py  dolphin_ocr_service.py  enhanced_document_processor.py  enhanced_document_processor_broken.py  enhanced_translation_service.py  language_detector.py  layout_aware_translation_service.py  main_document_processor.py  mcp_lingo_client.py  morphological_analyzer.py  morphological_analyzer_clean.py  neologism_detector.py  parallel_translation_service.py  pdf_document_reconstructor.py  pdf_quality_validator.py  philosophical_context_analyzer.py  philosophy_enhanced_document_processor.py  philosophy_enhanced_translation_service.py  translation_quality.py  translation_service.py  user_choice_manager.py
static/: philosophy_interface.css  philosophy_interface.js
static/demos/web-eval/: demo.html
templates/: philosophy_interface.html
tests/: README.md  __init__.py  conftest.py  helpers.py  test_api_routes.py  test_async_document_processor.py  test_choice_database.py  test_complete_integration.py  test_deployment_config.py  test_dolphin_client_bbox.py  test_dolphin_config.py  test_dolphin_errors.py  test_dolphin_logging.py  test_dolphin_ocr_live.py  test_dolphin_ocr_service.py  test_error_handling.py  test_integration_document_processing.py  test_layout_adjustments.py  test_layout_aware_translation_service.py  test_layout_preservation_engine.py  test_lingo_translator.py  test_migration_no_pymupdf.py  test_monitoring.py  test_neologism_detector.py  test_parallel_translation.py  test_pdf_document_reconstructor.py  test_pdf_quality_validator.py  test_pdf_reconstruction.py  test_pdf_to_image.py  test_pdf_validator.py  test_philosophy_enhanced_integration.py  test_render_metrics.py  test_translate_content_philosophy_async.py  test_translate_content_philosophy_load.py  test_translate_one_safety.py  test_translation_integration_with_layout.py  test_translation_service.py  test_ui_gradio.py  test_user_choice_manager.py  test_user_choice_models.py  (+2 more)
tests/services/: test_mcp_lingo_client.py
ui/: __init__.py  gradio_interface.py
utils/: __init__.py  file_handler.py  language_utils.py  pdf_validator.py  validators.py
